--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Title with primary keywords -->
-  <title>GymUdaan - Leading Gym Management Software || Best Gym Software Nepal</title>
+  <title>Byayamshala</title>
 
   <!-- Meta description targeting key phrases -->
   <meta
     name="description"
-    content="GymUdaan is the best gym software in Nepal. Manage your fitness center efficiently with Nepal’s leading gym management software used in Kathmandu, Pokhara, and beyond."
+    content="byayamshala is the best gym  in Nepal. Manage your fitness center efficiently with Nepal’s leading gym management  used in Kathmandu, Pokhara, and beyond."
   />
 
   <!-- Focused keywords -->
   <meta
     name="keywords"
-    content="best gym software Nepal, gym software Nepal, gym management software Nepal, fitness software Nepal, gym automation Nepal"
+    content="best gym  Nepal, gym  Nepal, gym management  Nepal, fitness  Nepal, gym automation Nepal"
   />
 
   <!-- Open Graph for social sharing -->
-  <meta property="og:title" content="Best Gym Software Nepal | GymUdaan" />
+  <meta property="og:title" content="Best Gym  Nepal | GymUdaan" />
   <meta
     property="og:description"
-    content="GymUdaan - Nepal's leading gym management software for all your fitness business needs."
+    content="GymUdaan - Nepal's leading gym management  for all your fitness business needs."
   />
   <meta property="og:image" content="https://yourdomain.com/gym-hero-og.jpeg" />
   <meta property="og:url" content="https://yourdomain.com" />
@@ -31,10 +31,10 @@
 
   <!-- Twitter card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Best Gym Software Nepal | GymUdaan" />
+  <meta name="twitter:title" content="Best Gym  Nepal | GymUdaan" />
   <meta
     name="twitter:description"
-    content="GymUdaan - Nepal's top gym software. Automate your gym management with ease."
+    content="GymUdaan - Nepal's top gym . Automate your gym management with ease."
   />
   <meta name="twitter:image" content="https://yourdomain.com/gym-hero-og.jpeg" />
 
